Improve readability in the userguide with a fixed size [ci skip]

--- a/user_guide_src/source/_static/css/citheme.css
+++ b/user_guide_src/source/_static/css/citheme.css
@@ -89,11 +89,10 @@ body, p, legend {
 }
 
 .wy-nav-content {
-	background-attachment: fixed;
 	background-image: url('../img/ci-background.png');
 	background-position: bottom right;
 	background-repeat: no-repeat;
-	background-size: contain;
+	background-size: 200px;
 }
 
 /* Titles ------------------------------------------------------------------- */
@@ -211,7 +210,6 @@ div#pulldown-menu {
 
 .wy-side-nav-search a {
 	color: #ffffff;
-	font-family: "Railway", "Helvetica", "Arial", sans-serif;
 }
 
 .wy-side-nav-search input[type=text] {
@@ -231,7 +229,7 @@ div#pulldown-menu {
 }
 
 .wy-nav-content {
-	max-width: none;
+	max-width: 900px;
 }
 
 .wy-nav-content-wrap a, .wy-nav-content-wrap a:visited {
@@ -256,17 +254,6 @@ div#pulldown-menu {
 	padding: 0px !important;
 	font-weight: inherit !important;
 	background-color: #f1d40f !important;
-}
-
-/* override table width restrictions */
-.wy-table-responsive table td, .wy-table-responsive table th {
-	white-space: normal;
-}
-
-.wy-table-responsive {
-	margin-bottom: 24px;
-	max-width: 100%;
-	overflow: visible;
 }
 
 .rst-content dl:not(.docutils) dt {
